# Package_guard

./: .gitignore  EXAMPLES.md  HOW_TO_PRESENT.md  README.md  TECHNICAL_REPORT.md
packageguard/: .gitignore  README.md  pyproject.toml
packageguard/sample/: package-lock.json
packageguard/sample_clean/: package-lock.json
packageguard/sample_hijack/: package-lock.json
packageguard/sample_typosquat/: package-lock.json
packageguard/sample_wallet/: package-lock.json
packageguard/src/packageguard/: __init__.py  cli.py
packageguard/src/packageguard/api/: __init__.py  app.py  schemas.py
packageguard/src/packageguard/core/: __init__.py  combiner.py  engine.py  explainer.py  features.py  gnn_scorer.py  lockfile.py  registry.py  remediation.py  scorer.py  subgraph.py
packageguard/src/packageguard/data/: demo_graphs.json  known_malware.json  real_poison_examples.json  top_packages.json
packageguard/src/packageguard/models/: combiner_v1_naive_nodeclf.meta.json  combiner_v2_naive_nodeclf.meta.json  graphsage_model.meta.json  xgboost_model.meta.json
packageguard/src/packageguard/output/: __init__.py  terminal.py
packageguard/src/packageguard/web/: app.js  awareness.js  graph.js  (+2 more)
packageguard/tests/: test_core.py
packageguard/training/: DATA_SOURCES.md  RESULTS.md  build_dataset.py  build_graph_dataset.py  build_heldout_benchmark.py  build_top_packages.py  evaluate_heldout_benchmark.py  generate_plots.py  heldout_benchmark.json  heldout_benchmark_results.json  train_combiner.py  train_gnn.py  train_xgboost.py
packageguard/training/raw_data/: bkc_packages.json
