[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packageguard"
version = "0.1.0"
description = "Supply-chain security tool: score packages for risk before install, scan projects for compromised dependencies. CLI + HUD dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PackageGuard" }]
keywords = ["security", "supply-chain", "npm", "malware", "cli"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Installed in Sem 7 Weeks 3-4 when the real model replaces the heuristic stub.
ml = [
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "shap>=0.45",
    "pandas>=2.2",
    "pyarrow>=15.0",
]
# Sem 8 graph neural network.
gnn = [
    "torch>=2.2",
    "torch-geometric>=2.5",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
packageguard = "packageguard.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
packageguard = ["web/*", "data/*.json", "models/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
